--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Autocuradoria</title>
+  <title></title>
     
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -789,55 +789,11 @@ hljs.initHighlightingOnLoad();
   <div class="reveal">
   <div class="slides">
 
-<section data-state="section" data-transition="default" data-transition-speed="slow">
-<h1>Autocuradoria</h1><p>Breno Xavier</p>
+<section id="open" data-state="section" data-transition="linear" data-transition-speed="default">
+<h1></h1><p></p>
 
 <div class="slideContent noTitle" >
-
-</div>
-
-</section>
-<section data-transition="default" data-transition-speed="slow">
-<h3>Autocuradoria</h3>
-<div class="slideContent" >
-<p>Exemplo de texto e muitas coisinhas tipo as duas primeiras frases do seu documento.
-<del>Aliais, cade o documento&hellip; hum!</del></p>
-
-</div>
-
-</section>
-<section data-transition="default" data-transition-speed="slow">
-<h3>Evento</h3>
-<div class="slideContent" >
-<blockquote>
-<ol>
-<li><a href="www.link.com">exmplo_link</a></li>
-<li>Bullet 1</li>
-<li>Bullet 1</li>
-</ol>
-</blockquote>
-
-</div>
-
-</section>
-<section data-state="section" data-transition="default" data-transition-speed="slow">
-<h2>Page 3</h2>
-<div class="slideContent" >
-
-</div>
-
-</section>
-<section data-state="prompt" data-transition="default" data-transition-speed="slow">
-<h3>Page 4</h3>
-<div class="slideContent" >
-
-</div>
-
-</section>
-<section data-transition="default" data-transition-speed="slow">
-<h3>Page 5</h3>
-<div class="slideContent" >
-<p>pode mudar a fonte</p>
+<p>Se a vida parece luta com o sertão por fora, talvez seja reflexo de um tipo de vivência com o <em>ser tão</em> por dentro</p>
 
 </div>
 
@@ -893,8 +849,8 @@ function commandsForSlide(indexh) {
       rollingLinks: false,
       
       theme: 'simple', 
-      transition: 'default',
-      transitionSpeed: 'slow',
+      transition: 'linear',
+      transitionSpeed: 'default',
       rtl: false,
       width: 960,
       height: 700,
